// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StepItem renders different status correctly 1`] = `
<div
  class="cloud-step horizontal circle"
  current="0"
>
  <div
    class="cloud-step-item wait"
  >
    <div
      class="cloud-step-icon wait"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="cloud-step-body"
    >
      <div
        class="cloud-step-title"
      >
        把冰箱门打开
      </div>
    </div>
  </div>
</div>
`;

exports[`StepItem renders different status correctly 2`] = `
<div
  class="cloud-step horizontal circle"
  current="0"
>
  <div
    class="cloud-step-item finish"
  >
    <div
      class="cloud-step-icon finish"
    >
      <i
        class="cloud-icon cloud-icon-finish"
      />
    </div>
    <div
      class="cloud-step-body"
    >
      <div
        class="cloud-step-title"
      >
        把冰箱门打开
      </div>
    </div>
  </div>
</div>
`;

exports[`StepItem renders different status correctly 3`] = `
<div
  class="cloud-step horizontal circle"
  current="0"
>
  <div
    class="cloud-step-item process"
  >
    <div
      class="cloud-step-icon process"
    >
      <span>
        1
      </span>
    </div>
    <div
      class="cloud-step-body"
    >
      <div
        class="cloud-step-title"
      >
        把冰箱门打开
      </div>
    </div>
  </div>
</div>
`;
